banner container created and content added to it. Lesson 121 & 122 complete.

--- a/6_myLandingPage_starter/sass/layout/_containers.sass
+++ b/6_myLandingPage_starter/sass/layout/_containers.sass
@@ -5,3 +5,7 @@
     margin-right: auto
     display: block
 
+.banner-container
+    padding: 40px 0
+    background-color: $base-dark
+    color: $white
