--- a/6_myLandingPage_starter/sass/_variables.sass
+++ b/6_myLandingPage_starter/sass/_variables.sass
@@ -17,7 +17,7 @@ $white:             #fff
 //Fonts
 $font-family-apple:         -apple-system, system-ui, BlinkMacSsystemFont, "Sego UI"
 $font-family-roboto:        'Roboto Slab', serif
-$font-base:                 $font-family-apple
+$font-family-base:          $font-family-apple
 
 $font-base:                 1rem
 $font-large:                1.25rem
