--- a/6_myLandingPage_starter/css/app.css
+++ b/6_myLandingPage_starter/css/app.css
@@ -1,7 +1,13 @@
+.center-block, .b-video-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 body {
   font-family: "Roboto Slab", serif;
   font-size: 1rem;
-  line-height: 1.25rem;
+  line-height: 1.25;
 }
 
 .row {
@@ -151,6 +157,11 @@ body {
 }
 .nav-menu .nav-menu-list .nav-item .nav-a:hover {
   color: red;
+}
+
+.b-video-img {
+  width: 100%;
+  padding: 30px 0 40px;
 }
 
 /*# sourceMappingURL=app.css.map */
