--- a/6_myLandingPage_starter/css/app.css
+++ b/6_myLandingPage_starter/css/app.css
@@ -88,6 +88,12 @@ body {
   color: #fff;
 }
 
+.splitter-container {
+  padding: 50px 0 50px;
+  background-color: #fffcfc;
+  text-align: center;
+}
+
 .home-title {
   font-size: 40px;
   font-weight: 700;
@@ -162,6 +168,17 @@ body {
 .b-video-img {
   width: 100%;
   padding: 30px 0 40px;
+}
+
+.img-item {
+  display: inline-block;
+  margin: 0 30px 40px;
+  vertical-align: middle;
+}
+
+.img-list {
+  margin: 0 -20px -40px;
+  padding: 0;
 }
 
 /*# sourceMappingURL=app.css.map */
