--- a/6_myLandingPage_starter/css/app.css
+++ b/6_myLandingPage_starter/css/app.css
@@ -1,4 +1,4 @@
-.center-block, .b-video-img {
+.center-block, .gear-img, .b-video-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -94,6 +94,12 @@ body {
   text-align: center;
 }
 
+.about-container {
+  background-color: #f6f5f5;
+  padding: 70px 0;
+  min-height: 540px;
+}
+
 .home-title {
   font-size: 40px;
   font-weight: 700;
@@ -126,6 +132,51 @@ body {
 }
 .b-card .b-title .b-video {
   margin: 0 auto 15px;
+}
+
+.about-title {
+  font-size: 2rem;
+  margin: 0 0 30px;
+  color: #212630;
+}
+
+.about-text {
+  margin: 0 0 50px;
+  color: #363e4e;
+  letter-spacing: -0.025em;
+}
+
+#page-footer {
+  clear: both;
+  background-color: #212630;
+  padding: 25px 0 40px;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.footer-container {
+  padding: 0 10%;
+}
+.footer-container .lego-footer {
+  font-size: 1rem;
+  font-weight: 200;
+  color: #fffcfc;
+}
+.footer-container .lego-footer .footer-wrappper {
+  display: inline-block;
+  padding: 20px 0;
+  flex-wrap: wrap;
+  cursor: pointer;
+}
+
+.footer-link {
+  margin-right: 36px;
+  color: #fffcfc;
+  text-decoration: none;
+}
+.footer-link:hover {
+  color: #CD4B3D;
 }
 
 .nav-header {
